logs/products.attachmentfield.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Products'...
Listing './lib/python3.5/site-packages/Products/AttachmentField'...
Compiling './lib/python3.5/site-packages/Products/AttachmentField/AttachmentHandler.py'...
***   File "./lib/python3.5/site-packages/Products/AttachmentField/AttachmentHandler.py", line 79
    raise NotImplementedError, "Attribute '%s' of class '%s' must be derived. This plugin won't be enabled." % (property, handler_class.__name__)
                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/Products/AttachmentField/Extensions'...
Compiling './lib/python3.5/site-packages/Products/AttachmentField/FlexStorage.py'...
***   File "./lib/python3.5/site-packages/Products/AttachmentField/FlexStorage.py", line 81
    exec storage_method
                      ^
SyntaxError: Missing parentheses in call to 'exec'

Compiling './lib/python3.5/site-packages/Products/AttachmentField/PortalTransformsAttachment.py'...
***   File "./lib/python3.5/site-packages/Products/AttachmentField/PortalTransformsAttachment.py", line 211
    raise ValueError, "No converter found for content type '%s'" % (ct,)
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/Products/AttachmentField/converters'...
Listing './lib/python3.5/site-packages/Products/AttachmentField/converters/MSExcel'...
Listing './lib/python3.5/site-packages/Products/AttachmentField/converters/MSExcel/win32'...
Listing './lib/python3.5/site-packages/Products/AttachmentField/converters/MSPowerpoint'...
Listing './lib/python3.5/site-packages/Products/AttachmentField/converters/MSPowerpoint/win32'...
Listing './lib/python3.5/site-packages/Products/AttachmentField/converters/MSWord'...
Listing './lib/python3.5/site-packages/Products/AttachmentField/converters/MSWord/win32'...
Listing './lib/python3.5/site-packages/Products/AttachmentField/converters/MSWord/win32/bin'...
Listing './lib/python3.5/site-packages/Products/AttachmentField/converters/MSWord/win32/lib'...
Listing './lib/python3.5/site-packages/Products/AttachmentField/converters/MSWord/win32/lib/pkgconfig'...
Listing './lib/python3.5/site-packages/Products/AttachmentField/converters/MSWord/win32/manifest'...
Listing './lib/python3.5/site-packages/Products/AttachmentField/converters/MSWord/win32/share'...
Listing './lib/python3.5/site-packages/Products/AttachmentField/converters/MSWord/win32/share/wv'...
Listing './lib/python3.5/site-packages/Products/AttachmentField/converters/OpenOffice'...
Listing './lib/python3.5/site-packages/Products/AttachmentField/converters/OpenOffice/sx2ml'...
Listing './lib/python3.5/site-packages/Products/AttachmentField/converters/RTF'...
Listing './lib/python3.5/site-packages/Products/AttachmentField/converters/RTF/win32'...
Listing './lib/python3.5/site-packages/Products/AttachmentField/converters/pdf'...
Listing './lib/python3.5/site-packages/Products/AttachmentField/converters/pdf/win32'...
Listing './lib/python3.5/site-packages/Products/AttachmentField/doc'...
Compiling './lib/python3.5/site-packages/Products/AttachmentField/global_symbols.py'...
***   File "./lib/python3.5/site-packages/Products/AttachmentField/global_symbols.py", line 69
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/Products/AttachmentField/i18n'...
Listing './lib/python3.5/site-packages/Products/AttachmentField/interfaces'...
Listing './lib/python3.5/site-packages/Products/AttachmentField/skins'...
Listing './lib/python3.5/site-packages/Products/AttachmentField/skins/attachmentfield'...
Compiling './lib/python3.5/site-packages/Products/AttachmentField/skins/attachmentfield/attachment_download.py'...
***   File "./lib/python3.5/site-packages/Products/AttachmentField/skins/attachmentfield/attachment_download.py", line 3
    return context.portal_attachment.manageDownload(context, traverse_subpath)
                                                                             ^
SyntaxError: 'return' outside function

Compiling './lib/python3.5/site-packages/Products/AttachmentField/skins/attachmentfield/formatSize.py'...
***   File "./lib/python3.5/site-packages/Products/AttachmentField/skins/attachmentfield/formatSize.py", line 13
    if size>(1024L*1024L*1024L):
                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/Products/AttachmentField/skins/attachmentfield/sample'...
Listing './lib/python3.5/site-packages/Products/AttachmentField/tests'...
Compiling './lib/python3.5/site-packages/Products/AttachmentField/tests/IAttachmentField.py'...
***   File "./lib/python3.5/site-packages/Products/AttachmentField/tests/IAttachmentField.py", line 125
    raise RuntimeError, "%d (over %d) MISSING TESTS:\n%s do not have a test associated." % (
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/Products/AttachmentField/tests/common.py'...
***   File "./lib/python3.5/site-packages/Products/AttachmentField/tests/common.py", line 84
    except ImportError, err:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/Products/AttachmentField/tests/input'...
Compiling './lib/python3.5/site-packages/Products/AttachmentField/tests/utils.py'...
***   File "./lib/python3.5/site-packages/Products/AttachmentField/tests/utils.py", line 50
    print nicerange(alo, ahi) + tag[0] + nicerange(blo, bhi)
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/Products/AttachmentField/www'...
Listing './lib/python3.5/site-packages/Products.AttachmentField-1.4.6.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
